// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InputError component Matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="ssb-input-error"
  >
    <span
      aria-live="assertive"
    >
      Insert error message
    </span>
  </div>
</DocumentFragment>
`;

exports[`InputError component Toggles classNames correctly 1`] = `
<DocumentFragment>
  <div
    class="ssb-input-error negative"
  >
    <span
      aria-live="assertive"
    >
      Insert error message
    </span>
  </div>
</DocumentFragment>
`;
